syntax = "proto3";

package hello;
option go_package ="hello/hellopb";

message helloRequest {
    string name = 1;
}

message helloResponse {
    string greeting =1;
}

message CalculatorRequest {
    string clientId =1;
    float  firstNumber = 2;
    float  secondNumber = 3;
}

message CalculatorResponse {
    string clientId =1;
    float  result = 2;
}

service helloService {
    rpc Hello(helloRequest) returns (helloResponse) {};
    rpc AddNumbers(CalculatorRequest) returns (CalculatorResponse) {};
    rpc SubtractNumbers(CalculatorRequest) returns (CalculatorResponse) {};
    rpc MultiplyNumbers(CalculatorRequest) returns (CalculatorResponse) {};
    rpc DevideNumbers(CalculatorRequest) returns (CalculatorResponse) {};
}